updated profile page added scoped status updates

--- a/test/fixtures/statuses.yml
+++ b/test/fixtures/statuses.yml
@@ -4,7 +4,12 @@ one:
   #name: MyString
   content: MyText
   user: dan
+
 two:
   #name: MyString
   content: MyText
   user: dan
+
+three:
+  content: "hi im jim"
+  user: jim
