--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -9,3 +9,9 @@ jim:
     last_name: "hoskins"
     email: "jimh@live.com"
     profile_name: "jimh"
+
+mike:
+    first_name: "mike"
+    last_name: "the frog"
+    email: "mikethefrog@live.com"
+    profile_name: "mikethefrog"
